# qsv-mediaviewer

./: .gitignore  CMakeLists.txt  CREDITS.txt  LICENSE.txt  README.md
resources/: dark.qss  light.qss  resources.qrc
resources/icons/dark/: info.txt
resources/icons/light/: info.txt
src/: main.cpp
src/logic/: filescanner.cpp  filescanner.h  imageviewcontroller.cpp  imageviewcontroller.h  mediamanager.cpp  mediamanager.h  navigationmanager.cpp  navigationmanager.h  playlistmanager.cpp  playlistmanager.h  settingsmanager.cpp  settingsmanager.h  thememanager.cpp  thememanager.h
src/ui/: compactwindow.cpp  compactwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/dialogs/: aboutdialog.cpp  aboutdialog.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui
src/ui/widgets/: bookshelfwidget.cpp  bookshelfwidget.h  clickable_slider.cpp  clickable_slider.h  controlbar.cpp  controlbar.h  controlbar.ui  foldertreewidget.cpp  foldertreewidget.h  listoptionswidget.cpp  listoptionswidget.h  musicplaylistwidget.cpp  musicplaylistwidget.h  panoramaview.cpp  panoramaview.h  slideshowwidget.cpp  slideshowwidget.h
src/utils/: common_types.h  mediaitemdelegate.cpp  mediaitemdelegate.h  pixmap_object.cpp  pixmap_object.h  sdl_headers.h
